# svan2d

./: .gitignore  BENCHMARK_RESULTS.md  README.md  benchmark_point2d_pool.py  package-lock.json  pyproject.toml  render-server-selfheal.md  run_tests.py  velement_suggestions.md
.github/workflows/: test.yml
benchmark/: README.md  interpolation_only_benchmark.py  run_benchmark.py  vertex_interpolation_benchmark.py
docs/: BENCHMARK_RESULTS.md  CHANGELOG.md  CONFIG.md  DEVSERVER.md  JUPYTER_SUPPORT.md  PLAYWRIGHT_SERVER.md
examples/: 01_ellipse_layout.py  02_simple_animation.py  03_logging.py  04_line_layout_animation.py  05_two_step_transition.py  06_the_wave.py  07_timed_keystates.py  08_keystates_variety.py  09_attribute_keystates.py  10_attribute_easing.py  11_segment_easing.py  12_give_me_a_break.py  13_not_always.py  14_element_alignment.py  15_group_dynamics.py  16_animation_helper.py  16_path_morphing.py  17_compound_animation.py  17_text_path_morphing.py  18_simple_morphs.py  19_complex_morphs.py  20_layout_show_case.py  20_shape_morphing.py  21_crossfade.py  21_layout_show_case.py  22_crossfade.py  22_effects.py  22_vertex_show_case.py  23_complex_morph.py  23_complex_morph_b.py  23_easing2D.py  24_clipping_basic.py  24_state_collection_morph copy.py  24_state_collection_morph.py  25_clipping_multiple_basic.py  25_embedded_state_collection_morph.py  26_clipping_animated.py  26_font_morphing.py  27_clipping_animated.py  27_word_morphing.py  (+26 more)
examples/segments/: 01_crossfade.py  02_bounce.py  03_hold.py  04_fade_inout.py  05_swap_positions.py  06_arc_swap_positions.py  07_slide_hold_slide.py  08_just_slide.py
showcases/gapminder/: axis.py  config.toml  data_prep.py  gapminder.py
showcases/sprint_100m/: README.md  config.toml  data_prep.py  main.py  runner_elements.py
showcases/sprint_100m_winners/: README.md  config.toml  main.py  runner_elements.py
svan2d/: __init__.py  pyrightconfig.json
svan2d/animation/: __init__.py  fade.py
svan2d/cli/: __init__.py  devserver_commands.py  font_commands.py  main.py  playwright_server_commands.py  resvg_server_commands.py
svan2d/component/: __init__.py  registry.py
svan2d/config/: __init__.py  config.py  config_key.py  defaults.toml
svan2d/converter/: __init__.py  cairo_svg_converter.py  converter_type.py  imagemagick_svg_converter.py  inkscape_svg_converter.py  pdf_page_sizes.py  resvg_svg_converter.py  (+5 more)
tests/: README.md  __init__.py  conftest.py
(+691 files in other folders)
