[project]
name = "svan2d"
version = "0.5.0-alpha"
description = "svan2d - state-driven, SVG-based 2D vector animation engine in python"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "drawsvg",
]

[project.optional-dependencies]
# Playwright HTTP server dependencies
playwright-server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "click>=8.1.0",
    "requests>=2.31.0",
]

# Development server dependencies
devserver = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "watchdog>=3.0.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
]

# Testing and dev dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.4.0",
]

# Font-to-vertex conversion
font = [
    "fonttools>=4.40.0",
]

# All optional dependencies
all = [
    "svan2d[playwright-server]",
    "svan2d[devserver]",
    "svan2d[dev]",
    "svan2d[font]",
]

[project.scripts]
svan2d = "svan2d.cli.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["svan2d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=svan2d",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for complete workflows",
    "benchmark: Performance benchmarks",
    "slow: Tests that take longer to run",
]

[tool.coverage.run]
source = ["svan2d"]
omit = [
    "*/tests/*",
    "*/playground/*",
    "*/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "I",    # isort (import sorting)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["svan2d"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]